# genRSS

./: .flake8  .gitignore  LICENSE.txt  README.md  genRSS.py  pyproject.toml  setup.py  tinyHttpServer.py  util.py
.github/workflows/: ci.yml
media-to-rss/: gen-rss.py
new_file/: pyproject.toml
src/: genRSS.py  util.py
src/genRSS/: __init__.py
src/generss/: __init__.py  util.py
test/: tinyHttpServer.py
test/media/: flac_with_tags.flac
tests/: test_util.py
tests/media/: 1.txt  subdir_link
